--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -18,6 +18,12 @@
   class = abbr
 }
 
+\DeclareAcronym{gen}{
+  short = \tsc{gen} ,
+  long  = genitive ,
+  class = abbr
+}
+
 \DeclareAcronym{1}{
   short = 1 ,
   long  = first person ,
