--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -2,14 +2,14 @@
 
 \chapter{A reoccurring pattern}
 
-First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives adhere to the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
+This chapter introduces the pattern that forms the focus of the first part of the dissertation. In Section \ref{sec:pattern-rels} I show that headless relatives adhere to the case scale in \ref{ex:case-scale-intro}.
 
-Then I show two phenomena that follow the same ordering of \ac{nom}, \ac{acc} and \ac{dat}. The two phenomena are accessibility hierarchies. The first one is about agreement, the second one about relativization.
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-intro}
 
-In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat} pattern in morphology.
+Then I show that this pattern is not unique to headless relatives. It appears in more morphosyntactic and morphophonological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also shows up in phonological patterns. It can be observed in patterns of syncretism and in morphological containment.
 
 
-\section{Case competition in headless relatives}
+\section{Case competition in headless relatives}\label{sec:pattern-rels}
 
 As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It is crosslinguistically shown that the two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
 I leave the genitive aside. In Section \ref{sec:genitive} I motivate why.
@@ -148,7 +148,7 @@ This topic is the main focus of Part \ref{part:complexity} of this dissertation.
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more morphosyntactic phenomena. Moreover, exactly this scale is also reflected in morphophonology.
 
 
-\section{Two implicational hierarchies}
+\section{Two implicational hierarchies}\label{sec:impl-hier}
 
 In this section I discuss two additional phenomena in morphosyntax that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization. These phenomena show that the pattern in headless relatives is not something that stands on itself. The scale is a pattern that reoccurs across languages and across different phenomena. Therefore, it should not be treated as an exception with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
@@ -544,8 +544,38 @@ In sum, some languages morphologically look like \tsc{nom}-\tsc{acc}-\tsc{dat}. 
 
 \section{Excluding the genitive}\label{sec:genitive}
 
-\begin{itemize}
-  \item possessive
-  \item accessibility hierarchy
-  \item not available
-\end{itemize}
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I restrict myself to cases that appear in all possible case competition combinations. The genitive does not fulfill that requirement, and is therefore excluded. I shortly discuss how the genitive is different from the three other cases.
+
+In Gothic headless relatives, there is data available of the genitive in case competition with the accusative. The genitive wins in this competition.
+I give an example in which the internal case is accusative and the external case is genitive in \ref{ex:gothic-gen-acc}.
+The relative clause is marked in bold, the relative pronoun is not.
+The internal case is accusative. The predicate \tit{gasehvun} `saw' takes accusative objects.
+The external case is genitive. The noun \tit{waiht} `thing' combines with a genitive.
+The relative pronoun \tit{þiz(e)} `what.\ac{gen}' appears in the external case: the genitive.
+
+\exg. ni waiht þiz \tbf{-ei} \tbf{gasehvun}\\
+ not thing\scsub{[gen]} what.\ac{gen} -\tsc{comp} saw\scsub{[acc]}\\
+ `not any of (that) which they saw' \flushfill{Gothic, \ac{luke} 9:36, adapted from \pgcitealt{harbert1978}{340}}\label{ex:gothic-gen-acc}
+
+If the internal case is genitive and the external case is accusative, the genitive wins as well. There are no attested examples in Gothic of genitives in case competition with nominatives or datives.
+
+The same holds for the two other main languages discussed in this thesis: Modern German and Old High German.
+In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.]]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
+In Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
+In sum, the genitive does not appear in all possible case competition combinations in all three languages, and is therefore excluded.
+
+The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
+
+
+\section{Summary}
+
+Case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-sum}. If the internal and external case differ, cases more on the right of the scale win over cases more to the left on the case.
+
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-sum}
+
+This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two morphosyntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
+The second implicational hierarchy concerns relativization. If a dative in a language can be relativized with a particular strategy, an accusative and a nominative can be too using the same strategy. If an accusative can be relativized with a particular strategy, so can a nominative with this strategy.
+
+The case scale also shows up in morphophonological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
+
+The next chapter shows how features of the nominative, accusative and dative are organized. All facts presented in this chapter can be derived from the organization of these features.
